--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <script type="text/javascript" src="index.js" charset="utf-8"></script>
   </body>
   <footer>
-    Made with ❤️ in London.
+    Made with ❤️ in Turin.
   </footer>
 
 </html>
